fix: fixes various issues with IDs and links with HTML embedded in Markdown

--- a/packages/starlight-links-validator/tests/fixtures/with-invalid-links/src/content/docs/guides/example.mdx
+++ b/packages/starlight-links-validator/tests/fixtures/with-invalid-links/src/content/docs/guides/example.mdx
@@ -17,3 +17,17 @@ import { Card, CardGrid } from '@astrojs/starlight/components'
 - [Link to invalid anchor in another page](/unknown/#links)
 
 <a href="/unknown">HTML link to unknown page</a>
+
+<div id="aBlock">
+some content
+
+some content
+
+some content
+
+some content
+
+  <a href="#anotherBlock">
+    test
+  </a>
+</div>
