--- a/packages/starlight-links-validator/tests/fixtures/with-valid-links/src/content/docs/guides/example.mdx
+++ b/packages/starlight-links-validator/tests/fixtures/with-valid-links/src/content/docs/guides/example.mdx
@@ -16,3 +16,21 @@ import { Card, CardGrid } from '@astrojs/starlight/components'
 - [Link to anchor in the same page](#some-links)
 
 <a href="/test">HTML link to another page</a>
+
+<div id="aBlock">
+some content
+
+some content
+
+some <span id="aText">other</span> content
+
+some content
+
+<a href="#aBlock">test block</a>
+
+some content
+
+  <a href="#aText">
+    test text
+  </a>
+</div>
