feat: add support for validating emitted file assets

--- a/packages/starlight-links-validator/tests/fixtures/with-valid-links/src/content/docs/guides/example.mdx
+++ b/packages/starlight-links-validator/tests/fixtures/with-valid-links/src/content/docs/guides/example.mdx
@@ -34,3 +34,6 @@ some content
     test text
   </a>
 </div>
+
+<a href="/favicon.svg">Link to an asset</a>
+<a href="/guidelines/dummy.pdf">Link to another asset</a>
