--- a/packages/starlight-links-validator/tests/fixtures/with-invalid-links/src/content/docs/guides/example.mdx
+++ b/packages/starlight-links-validator/tests/fixtures/with-invalid-links/src/content/docs/guides/example.mdx
@@ -31,3 +31,6 @@ some content
     test
   </a>
 </div>
+
+<a href="/icon.svg">Link to invalid asset</a>
+<a href="/guidelines/ui.pdf">Link to another invalid asset</a>
