--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Starlight Links Validator
-description: Astro integration for Starlight to validate internal links.
+description: Starlight plugin to validate internal links.
 head:
   - tag: title
     content: Starlight Links Validator
@@ -8,7 +8,7 @@ template: splash
 editUrl: false
 lastUpdated: false
 hero:
-  tagline: Astro integration for Starlight to validate internal links.
+  tagline: Starlight plugin to validate internal links.
   image:
     html: '🦺'
   actions:
@@ -23,7 +23,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components'
 ## Next steps
 
 <CardGrid stagger>
-  <Card title="Configure the integration" icon="setting">
+  <Card title="Configure the plugin" icon="setting">
     Edit your config in `astro.config.mjs`.
   </Card>
   <Card title="Read the docs" icon="open-book">
