feat: add a new option to not error on fallback page links

--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -75,3 +75,6 @@ export default defineConfig({
   ],
 })
 ```
+
+Running a production build will now validate all internal links in your Markdown and MDX files.
+The Starlight Links Validator plugin behavior can be tweaked using various [configuration options](/configuration).
