--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -13,7 +13,7 @@ hero:
     html: '🦺'
   actions:
     - text: Getting Started
-      link: /guides/getting-started/
+      link: /getting-started/
       icon: rocket
       variant: primary
 ---
@@ -27,6 +27,6 @@ import { Card, CardGrid } from '@astrojs/starlight/components'
     Edit your config in `astro.config.mjs`.
   </Card>
   <Card title="Read the docs" icon="open-book">
-    Learn more in [the Starlight Links Validator Docs](/guides/getting-started/).
+    Learn more in [the Starlight Links Validator Docs](/getting-started/).
   </Card>
 </CardGrid>
