docs: update index cards

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -23,8 +23,14 @@ import { Card, CardGrid } from '@astrojs/starlight/components'
 ## Next steps
 
 <CardGrid stagger>
+  <Card title="Install the plugin" icon="puzzle">
+    Check the [getting started guide](/getting-started/) for installation instructions.
+  </Card>
   <Card title="Configure the plugin" icon="setting">
     Edit your config in `astro.config.mjs`.
+  </Card>
+  <Card title="Build your site" icon="error">
+    Get errors on broken links before deploying your site.
   </Card>
   <Card title="Read the docs" icon="open-book">
     Learn more in [the Starlight Links Validator Docs](/getting-started/).
