docs: fix package name

--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -24,7 +24,7 @@ import { PackageManagers } from '@hideoo/starlight-plugins-docs-components'
 
 1. Starlight Links Validator is a Starlight [plugin](https://starlight.astro.build/reference/plugins/). Install it using your favorite package manager:
 
-   <PackageManagers pkg="starlight-image-zoom" />
+   <PackageManagers pkg="starlight-links-validator" />
 
 2. Configure the plugin in your Starlight [configuration](https://starlight.astro.build/reference/configuration/#plugins) in the `astro.config.mjs` file.
 
